--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.light_green-green.min.css" />
-  <script async defer src="https://apis.google.com/js/platform.js"></script>
+  <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
   <script async defer src="https://apis.google.com/js/api.js"></script>
   <script src="/mybc/assets/js/anymeet.js"></script>
 </head>
