--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <!-- <link rel="stylesheet" href="http://mseemann.io/angular2-mdl-ext/app.2aad265add3488f2bf2d.css" /> -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.light_green-green.min.css" />
+  <!-- <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.grey-cyan.min.css" /> -->
+  <link rel="stylesheet" href="/mybc/assets/css/material.min.css" />
   <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
   <script async defer src="https://apis.google.com/js/api.js"></script>
   <script src="/mybc/assets/js/anymeet.js"></script>
