--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-light_green.min.css" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-light_green.min.css" />
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>  
   <script src="/mybc/assets/js/anymeet.js"></script>
   <script src="/mybc/assets/js/clipboard.min.js"></script>
